title wrap css bug fix

--- a/app/assets/stylesheets/image-hover.css
+++ b/app/assets/stylesheets/image-hover.css
@@ -36,8 +36,8 @@
 .vidSubtitle { top: 46px; font-weight: 400; left:40px !important; }
 .title-wrap, .title-wrap2, .subtitle-wrap, .subtitle-wrap2, .subtitle-wrap3 { overflow: hidden; position: relative;text-transform:uppercase; }
 .title-wrap h3, .title-wrap2 h3, .subtitle-wrap p, .subtitle-wrap2 p, .subtitle-wrap3 { overflow: hidden; white-space: nowrap; color:#fff; padding:0px; font-weight:700; text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3); }
-.title-wrap h3, .title-wrap2 h3 {font-size:14px; letter-spacing:1px; text-transform:uppercase;}
-.subtitle-wrap p {font-size:12px; font-weight:400;font-family:'Raleway';font-style:none;margin-top:12px;text-transform:none;text-align:justify;}
+.title-wrap h3, .title-wrap2 h3 {font-size:14px; letter-spacing:1px; text-transform:uppercase;text-align:left}
+.subtitle-wrap p {font-size:12px; font-weight:400;font-family:'Raleway';font-style:none;margin-top:12px;text-transform:none;text-align:left;}
 .subtitle-wrap {margin-top:-22px!important;width:110%;}
 .subtitle-wrap2 p, .subtitle-wrap3 p {font-size:12px; font-weight:400;font-family:'Raleway';font-style:none;margin-top:22px;text-transform:none;overflow:visible;white-space:normal;text-align:justify;}
 .subtitle-wrap2 {margin-top:-20px!important;width:90%;}
